--- a/app/index.html
+++ b/app/index.html
@@ -202,7 +202,7 @@
             :enter-active-class="enterClass"
             :leave-active-class="leaveClass"
           >
-            <div :key="index" class="items">
+            <div :key="index" class="items" ref="items">
               <a href="#" class="item">
                 <div class="price">$25</div>
                 <div class="photo">
@@ -295,7 +295,6 @@
     <!-- bower:js -->
     <script src="/bower_components/lodash/dist/lodash.min.js"></script>
     <script src="/bower_components/vue/dist/vue.min.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/get-size/get-size.js"></script>
     <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
     <script src="/bower_components/desandro-matches-selector/matches-selector.js"></script>
