Simplified image styles in "#shop" section
That also fixed some Edge issues

--- a/app/index.html
+++ b/app/index.html
@@ -206,37 +206,37 @@
               <a href="#" class="item">
                 <div class="price">$25</div>
                 <div class="photo">
-                  <img class="horizontal" src="images/shop_01.jpg">
+                  <img src="images/shop_01.jpg">
                 </div>
               </a>
               <a href="#" class="item">
                 <div class="price">$30</div>
                 <div class="photo">
-                  <img class="horizontal" src="images/shop_02.jpg">
+                  <img src="images/shop_02.jpg">
                 </div>
               </a>
               <a href="#" class="item">
                 <div class="price">$35</div>
                 <div class="photo">
-                  <img class="vertical" src="images/shop_03.jpg">
+                  <img src="images/shop_03.jpg">
                 </div>
               </a>
               <a href="#" class="item">
                 <div class="price">$25</div>
                 <div class="photo">
-                  <img class="horizontal" src="images/shop_04.jpg">
+                  <img src="images/shop_04.jpg">
                 </div>
               </a>
               <a href="#" class="item">
                 <div class="price">$30</div>
                 <div class="photo">
-                  <img class="vertical" src="images/shop_05.jpg">
+                  <img src="images/shop_05.jpg">
                 </div>
               </a>
               <a href="#" class="item">
                 <div class="price">$35</div>
                 <div class="photo">
-                  <img class="horizontal" src="images/shop_06.jpg">
+                  <img src="images/shop_06.jpg">
                 </div>
               </a>
             </div>
