Simplified info boxes' styles

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
     <section id="services">
       <div class="info center">
         <h2>My services</h2>
-        <h1>For me, photography is both<br>&nbsp;a hobby and a profession</h1>
+        <h1>For me, photography is both a hobby and a profession</h1>
       </div>
       <div class="links">
         <a href="#"><span>Weddings</span></a>
@@ -106,7 +106,7 @@
       <div class="info-wrapper">
         <div class="info right">
           <h2>My albums</h2>
-          <h1>I love photographing<br>&nbsp;a multitude of places<br>&nbsp;and subjects</h1>
+          <h1>I love photographing a multitude of places and subjects</h1>
           <a class="btn" href="#">View all albums</a>
         </div>
       </div>
@@ -142,7 +142,7 @@
     <section id="thoughts">
       <div class="info center">
         <h2>My thoughts</h2>
-        <h1>Apart from photography,<br>&nbsp;I also love to write</h1>
+        <h1>Apart from photography, I also love to write</h1>
       </div>
       <div class="navigation">
         <div class="button" @click="slideRight">
@@ -178,7 +178,7 @@
       <div class="info-wrapper">
         <div class="info left">
           <h2>Sophia McGregor</h2>
-          <h1>Young and avid<br>&nbsp;photographer based<br>&nbsp;in LosAngeles</h1>
+          <h1>Young and avid photographer based in Los Angeles</h1>
           <a class="btn" href="#">More about me</a>
         </div>
       </div>
@@ -187,7 +187,7 @@
     <section id="shop">
       <div class="info center">
         <h2>My shop</h2>
-        <h1>Buy high-quality prints<br>&nbsp;of my photos</h1>
+        <h1>Buy high-quality prints of my photos</h1>
       </div>
       <div class="navigation">
         <div class="button" @click="slideRight">
@@ -252,7 +252,7 @@
       <div class="info-wrapper">
         <div class="info right">
           <h2>Get in touch</h2>
-          <h1>Wanna say hello<br>&nbsp;or hire me for your<br>&nbsp;next event?</h1>
+          <h1>Wanna say hello or hire me for your next event?</h1>
           <a class="btn" href="#">Send a message</a>
         </div>
       </div>
@@ -286,7 +286,7 @@
           <a href="#" class="fa fa-youtube-play"></a>
         </div>
         <div class="copyrights">
-          &copy; 2017 Sophia McGregor.<br>&nbsp;All rights reserved.
+          &copy; 2017 Sophia McGregor. All rights reserved.
         </div>
       </div>
     </footer>
