Fixed bug that caused "#shop" section to not render in IE11

--- a/app/index.html
+++ b/app/index.html
@@ -195,7 +195,7 @@
         </div>
         <div
           class="items-wrapper"
-          :class="{ initialized }"
+          :class="{ initialized: initialized }"
           :style="itemsWrapperStyle"
         >
           <transition
