Added missing "<br>" tag in the footer

--- a/app/index.html
+++ b/app/index.html
@@ -286,7 +286,7 @@
           <a href="#" class="fa fa-youtube-play"></a>
         </div>
         <div class="copyrights">
-          &copy; 2017 Sophia McGregor. All rights reserved.
+          &copy; 2017 Sophia McGregor.<br>All rights reserved.
         </div>
       </div>
     </footer>
